# sora

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: bench_find_mapping.rs  bench_parse.rs  utils.rs
benches/data/: tiny.js.map
data/: index-map.js.map  sum.js.map
src/: error.rs  extension.rs  finder.rs  hint.rs  lib.rs  mapping.rs  mappings.rs  splitter.rs  vlq.rs
src/sourcemap/: borrowed.rs  builder.rs  mod.rs  owned.rs  raw.rs
tests/: test_builder.rs  test_parse.rs  test_spec.rs
