[package]
name = "sora"
version = "0.0.3"
authors = ["unbyte <i@shangyes.net>"]
description = "lightweight and fast source map parser and utils"
keywords = ["sourcemap"]
repository = "https://github.com/ost-project/sora"
homepage = "https://github.com/ost-project/sora#readme"
documentation = "https://docs.rs/sora"
edition = "2021"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0"

serde = "1.0"

simd-json = { version = "0.13", default-features = false, features = ["runtime-detection", "swar-number-parsing"] }
simd-json-derive = "0.13"

memchr = "2.6"

[dev-dependencies]
insta = "1.39"
criterion = "0.5"
sourcemap = { git = "https://github.com/getsentry/rust-sourcemap.git", package = "sourcemap" }

serde_json = "1.0"
paste = "1.0"

mimalloc = "0.1"

[features]
builder = []
index-map = []
ignore_list = []

[profile.bench]
lto = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_find_mapping"
harness = false
